go를 사용하여 읽기 좋은 코드로 만들기

--- a/5.html
+++ b/5.html
@@ -37,12 +37,18 @@
         a => a + 10,
         a => a + 100,
         )
-        
+
     const f2 = pipe2(
         (a, b) => a + b,
         a => a + 10,
         a => a + 100,
     )
-
-
+</script>
+<script>
+    go(products,
+        products => filter(p => p.price < 20000, products),
+        products => map(p => p.price, products),
+        prices => reduce(add, prices),
+        log
+    );
 </script>
