함수 조합으로 함수 만들기

--- a/6.html
+++ b/6.html
@@ -72,6 +72,7 @@
 ## curry
 
 <script>
+  const curry = f => (a, ..._) => _.length ? f(a, ..._) : (..._) => f(a, ..._);
 
   const mult = curry((a, b) => a * b);
   log(mult(3)(2));
