range/ range 테스트/ take

--- a/1.html
+++ b/1.html
@@ -44,8 +44,8 @@
 <script>
     const apply1 = f => f(1);
     const add2 = a => a + 2;
-    // log(apply1(add2));
-    // log(apply1(a=>a-1));
+    // log(apply1(add2)); //3
+    // log(apply1(a=>a-1)); //0
 
     const times = (f, n) => {
         let i = -1;
