--- a/3.html
+++ b/3.html
@@ -9,6 +9,64 @@
         {name:'바지', price:25000},
     ]
 </script>
+# map
+
+<script>
+  const map = (f, iter) => {
+    let res = [];
+    for (const a of iter) {
+      res.push(f(a));
+    }
+    return res;
+  };
+
+  // let names = [];
+  // for (const p of products) {
+  //   names.push(p.name);
+  // }
+  // log(names);
+
+  log(map(p => p.name, products));
+
+  // let prices = [];
+  // for (const p of products) {
+  //   prices.push(p.price);
+  // }
+  // log(prices);
+
+  log(map(p => p.price, products));
+
+</script>
+
+# 이터러블 프로토콜을 따른 map의 다형성
+
+<script>
+  log([1, 2, 3].map(a => a + 1));
+
+  log(map(el => el.nodeName, document.querySelectorAll('*')));
+
+  // const it = document.querySelectorAll('*')[Symbol.iterator]();
+  // log(it.next());
+  // log(it.next());
+  // log(it.next());
+  // log(it.next());
+  // log(it.next());
+
+  function* gen() {
+    yield 2;
+    if (false) yield 3;
+    yield 4;
+  }
+
+  log(map(a => a * a, gen()));
+
+  let m = new Map();
+  m.set('a', 10);
+  m.set('b', 20);
+  log(new Map(map(([k, a]) => [k, a * 2], m)));
+
+  console.clear();
+</script>
 
 # filter
 <script>
