--- a/9.html
+++ b/9.html
@@ -73,3 +73,20 @@ log(reduce(add, list));
     log(take(5, L.range(100)));// 배열을 다 만들지 않고, 만들면서 5개의 값만 먼저 만든다. 즉 연산을 미룬다.
     console.timeEnd('');// 0.438964
 </script>
+<!-- ---------------------------------------------------------- -->
+
+# 이터러블 중심 프로그래밍에서의 지연 평가 (Lazy Evaluation)
+- 제때 계산법
+- 느긋한 계산법 
+- 제너레이터 / 이터레이터 프로토콜을 기반으로 구현
+
+### L.map
+<script>
+    
+</script>
+
+### map, filter 계열 함수들이 가지는 결합 법칙
+- 사용하는 데이터가 무엇이든지
+- 사용하는 보조 함수가 순수 함수라면 무엇이든지
+- 아래와 같이 결합한다면 둘 다 결과가 같다.
+[[mapping, mapping], [filtering, filtering],[mapping, mapping]]
